[package]
name = "pcarp"
version = "1.2.0"
authors = ["Alex Sayers <alex@asayers.com>", "Mitsutoshi Aoe <maoe@foldr.in>"]
description = "A pure-Rust library for reading pcap-ng files"
license = "Unlicense"
exclude = ["integration_tests/*", "fuzz/*"]
categories = ["encoding", "network-programming"]
keywords = ["pcap", "pcapng", "pcap-ng"]
readme = "README.md"
documentation = "https://docs.rs/pcarp"
repository = "https://github.com/asayers/pcarp"
edition = "2018"

[dependencies]
buf_redux = "0.8"
byteorder = "1.3"
log = "0.4"

[dev-dependencies]
clap = "2.32"
env_logger = "0.7"
flate2 = "1.0"
humantime = "1.1"
pcap = "0.7"
sha1 = { version = "0.6", features = ["std"] }
xz2 = "0.1"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
