[package]
name = "pcarp"
version = "1.4.0"
authors = ["Alex Sayers <alex@asayers.com>", "Mitsutoshi Aoe <maoe@foldr.in>"]
description = "A pure-Rust library for reading pcap-ng files"
license = "Unlicense"
exclude = ["integration_tests/*", "fuzz/*"]
categories = ["encoding", "network-programming"]
keywords = ["pcap", "pcapng", "pcap-ng"]
readme = "README.md"
documentation = "https://docs.rs/pcarp"
repository = "https://github.com/asayers/pcarp"
edition = "2021"

[dependencies]
bytes = "1.2.1"
thiserror = "1.0.39"
tracing = { version = "0.1.37", features = ["log"] }

[dev-dependencies]
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
flate2 = "1.0.25"
humantime = "2.1.0"
md5 = "0.7.0"
pcap = "1.0.0"
xz2 = "0.1"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
